# rust-analyzer-mcp

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  plan-mcp,md
.github/workflows/: ci.yml
config/: default.toml
examples/: mcp_test.rs
scripts/: install.ps1  install.sh
src/: cache.rs  config.rs  lib.rs  main.rs  metrics.rs
src/lsp/: client.rs  mod.rs  protocol.rs  transport.rs
src/mcp/: health.rs  mod.rs  prompts.rs  resources.rs  server.rs  tools.rs
src/updater/: binary.rs  github.rs  mod.rs  version.rs
src/utils/: mod.rs  platform.rs  security.rs
src/workspace/: config.rs  discovery.rs  manager.rs  mod.rs
tests/integration/: basic_test.rs  mcp_tools_test.rs
