[package]
name = "rust-analyzer-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "MCP Server for rust-analyzer LSP"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-analyzer-mcp"
rust-version = "1.70"

[lib]
name = "rust_analyzer_mcp"
path = "src/lib.rs"

[[bin]]
name = "rust-analyzer-mcp"
path = "src/main.rs"

[[example]]
name = "mcp_test"
path = "examples/mcp_test.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.10"
lsp-types = "0.94"
url = "2.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
chrono = "0.4"
flate2 = "1.0"
tempfile = "3.8"
tar = "0.4"
zip = "0.6"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"